# genomics-assets

./: .gitignore  README.md  pixi.toml  pyproject.toml
assets/ERCC92/: ERCC92.fa  ERCC92.gtf
configs/: contamination_db.yaml  ref_10xgenomics.yaml  ref_genome_blacklists.yaml  ref_genomes.yaml  tenx_binaries.yaml
src/genomics_assets/: blacklists.py  cli.py  common.py  contamination_db.py  ref_genomes.py  tenx.py
tests/: test_smoke.py  test_tenx_binary.py
